--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h2>
         Nothing to show here
     </h2>
+    <p id="times"></p>
+    <p id="times2"></p>
     <button id="liked">like</button>
 </body>
 <script src="./script2.js"></script>
