--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <p id="times"></p>
     <p id="times2"></p>
     <button id="liked">like</button>
+    <div>
+        <button id="btnHolder">Generate Otp</button>
+    </div>
+    <p id="yourOtp"></p>
 </body>
-<script src="./script2.js"></script>
+<script src="./studyThisKeyWord.js"></script>
 </html>
